// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard should format large values 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        10,000,000,000
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render card without the percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard should render green 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #90ee7e;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render green card without the percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard should render negative growth 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #ff0066;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          
          -30%
          <div
            className="c9 c10 lni lni-chevron-down"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render negative growth without percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard should render positive growth 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render positive growth without percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard should render red 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #ff0066;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render red card without the percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #ff0066;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard should render two decimal points in growth 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          +
          33.33%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  text-align: center;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c8 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #1ea7fd;
}

.c0 {
  padding: 1.2em;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
          fontFamily="exo"
          size="normal"
        >
          
          0%
          <div
            className="c9 c10 lni lni-minus"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth without percentage 1`] = `
.c3 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c2 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c1 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: #999999;
}

.c4 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: unset;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="openSans"
    size="normal"
  >
    Title
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        fontFamily="exo"
        size="large"
      >
        1
      </div>
    </div>
  </div>
</div>
`;
